--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
           <button id="abortButton">Close</button>
       </div>
   </script>
-
+<style>
+  .no-record-text{
+    padding-left: 4px;
+  }
+  </style>
 <script>
 var ele = document.getElementById('container');
 if(ele) {
